Producer update